
## Version 5.0.0

* Adding new GUI backend PySide6
* Adding AV1 support for rigaya's Nvidia and Intel hardware encoders!
* Adding default source directory (thanks to Battlestar1965)
* Adding hidden tabs for things that are not supported for a certain codec
* Adding #345 Change the default priority of spawned tools (thanks to Maximo Piva)
* Adding #371 Add "Stay on Top" (thanks to Hexenhammer)
* Fixing #370 Audio Match not working correctly after 4.10.0 (thanks to Hexenhammer)
* Fixing settings panel would always want a restart if any paths to executables were filled on Windows
* Fixing #374 name of hdr10plus tool name and adding link in settings (thanks to Richard Harmonson)
* Fixing check for output same as source on file systems that don't support resolve
* Fixing #378 Deprecated features used for SVT-AV1 (thanks to DesertCookie)
* Removing support and builds for Windows 7 and 8
* Removing support and builds for MacOS 10

## Version 4.10.0

* Adding AVIF support using libsvtav1
* Adding #352 default output directory to settings panel (thanks to Maddie Davis)
* Adding #306 support for audio profiles with pattern matching for rigaya's hardware encoders
* Adding #301 Select All feature for subtitles (thanks to ProFire and Genine-Collin)
* Adding #325 build for Ubuntu 22.04 (thanks to mrjayviper)
* Adding build for MacOS 12
* Adding #322 warning if profile audio match doesn't match anything (thanks to wynterca)
* Adding presumption that 4.x branch is last to support Windows 7 and 8 for update checks
* Fixing #319 no longer disables built in tracks for profile matching (thanks to Owen Quinlan)
* Fixing #218 and #308 subtitle scaling with rigaya's hardware encoders needs to be scaled for 4K content (thanks to wynterca)
* Fixing #350 subtitle burn in quoting (thanks to Maddie Davis)
* Fixing #346 preserve the order of audio tracks when editing a queued job (thanks to Patrick Bassner)